2013-09-03 Riccardo Mottola <rm@gnu.org>

	* xpdf/xpdf-3.02/splash/SplashXPathScanner.cc
	Import patch from OpenBSD
	http://www.mail-archive.com/ports@openbsd.org/msg23488.html

2013-08-16 Riccardo Mottola <rm@gnu.org>

	* xpdf/bridge/GNUmakefile.in
	* xpdf/xpdf-3.02/GNUmakefile.in
	Get CC and CXX variables, silence some warnings.

2012-06-13 Riccardo Mottola <rm@gnu.org>

	* GNUmakefile.in
	For clang add -lstdc++ at linking stage.

2012-06-02 Riccardo Mottola <rm@gnu.org>

	* GNUmakefile.in
	On OpenBSD, embed freetype path with -rpath

2012-06-02 Riccardo Mottola <rm@gnu.org>

	* GNUmakefile.in
	Use C++ to link.

2012-05-31 Riccardo Mottola <rm@gnu.org>

	* GNUmakefile.in
	* configure
	* configure.ac
	* xpdf/GNUmakefile.in
	* xpdf/bridge/GNUmakefile.in
	* xpdf/xpdf-3.02/GNUmakefile.in
	Do not force g++, pass compiler flags correctly.

2012-05-31 Riccardo Mottola <rm@gnu.org>

	* GNUmakefile.in
	Pass additional flags.

	* configure.ac
	Better handling of freetype flags for openbsd

	* configure
	regenerated

2012-02-27 Riccardo Mottola <rm@gnu.org>

	* PDFImageRep.m:
	Clean up imports.

2012-02-27 Riccardo Mottola <rm@gnu.org>

	* PDFImageRep.m:
	Subclass -draw (suggested by Eric W. to make cario work again)

2011-08-30 Sebastian Reitenbach

	* xpdf/bridge/CountingRef.h
	* PDFDocument.m
	Patch for gcc 2.95 build

2006-06-09 Enrico Sersale (enrico at fibernet dot ro)

	* version 0.9.
	* PDFKit is now based on the xpdf-3.01 sources.

2004-11-06 18:52  stefankst

	* xpdf/xpdf-3.00/xpdf/XRef.cc: applied xpdf patch to fix various
	  buffer overflows

2004-10-11 19:29  stefankst

	* Documentation/ChangeLog: updated for v0.8

2004-10-11 19:26  stefankst

	* xpdf/xpdf-3.00/GNUmakefile: use $(MAKE) instead of gmake

2004-10-11 19:25  stefankst

	* Documentation/INSTALL: added notes about gnu make

2004-10-11 19:24  stefankst

	* GNUmakefile: set framework version

2004-10-07 23:43  stefankst

	* config.make: improved freetype detection (thanks to Rob Burns)
